--- a/TicTacToe/MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/TicTacToe/MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -48,16 +48,25 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wuG-fR-Cl9">
+                                <state key="normal" title="Continue Game"/>
+                                <connections>
+                                    <action selector="ContinuePressed:" destination="8el-tC-z7b" eventType="touchUpInside" id="B8n-RD-7yY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="rTc-nN-Icz" firstAttribute="top" secondItem="KV3-LS-k9I" secondAttribute="bottom" constant="8" id="4gr-Fh-B11"/>
+                            <constraint firstItem="rTc-nN-Icz" firstAttribute="top" secondItem="KV3-LS-k9I" secondAttribute="bottom" constant="8" symbolic="YES" id="4gr-Fh-B11"/>
                             <constraint firstItem="KV3-LS-k9I" firstAttribute="centerX" secondItem="rTc-nN-Icz" secondAttribute="centerX" id="B2E-qQ-99Y"/>
+                            <constraint firstItem="KV3-LS-k9I" firstAttribute="top" secondItem="22c-w0-Z1l" secondAttribute="bottom" constant="8" symbolic="YES" id="S0Z-sx-Dvt"/>
                             <constraint firstItem="rTc-nN-Icz" firstAttribute="centerX" secondItem="hJC-VP-mGH" secondAttribute="centerX" id="bme-53-Zut"/>
-                            <constraint firstItem="rTc-nN-Icz" firstAttribute="centerY" secondItem="hJC-VP-mGH" secondAttribute="centerY" id="ltI-KY-Jk6"/>
+                            <constraint firstItem="wuG-fR-Cl9" firstAttribute="top" secondItem="rTc-nN-Icz" secondAttribute="bottom" constant="8" id="gDD-T6-RVg"/>
+                            <constraint firstItem="wuG-fR-Cl9" firstAttribute="centerX" secondItem="rTc-nN-Icz" secondAttribute="centerX" id="vur-k5-NpY"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="ContinueButton" destination="wuG-fR-Cl9" id="9tf-mb-9uh"/>
                         <outlet property="NewGameButton" destination="rTc-nN-Icz" id="Yqz-eJ-hOp"/>
                     </connections>
                 </viewController>
@@ -130,13 +139,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="gOI-f0-sK0" firstAttribute="leading" secondItem="YPR-8x-QhZ" secondAttribute="trailing" constant="1" id="15w-w4-vsu"/>
-                            <constraint firstItem="Cib-pi-u5J" firstAttribute="centerY" secondItem="FjY-go-2TF" secondAttribute="centerY" id="4oe-jg-utU"/>
                             <constraint firstItem="YPR-8x-QhZ" firstAttribute="height" secondItem="Cib-pi-u5J" secondAttribute="height" id="ABg-uF-Bmd"/>
                             <constraint firstItem="YPR-8x-QhZ" firstAttribute="leading" secondItem="Cib-pi-u5J" secondAttribute="leading" id="JTP-oO-pBf"/>
                             <constraint firstItem="Cib-pi-u5J" firstAttribute="top" secondItem="cdN-ua-l5m" secondAttribute="bottom" constant="8" symbolic="YES" id="O7a-3S-2fO"/>
                             <constraint firstItem="cdN-ua-l5m" firstAttribute="centerX" secondItem="Cib-pi-u5J" secondAttribute="centerX" id="P0D-67-wKs"/>
                             <constraint firstItem="YPR-8x-QhZ" firstAttribute="top" secondItem="Cib-pi-u5J" secondAttribute="top" id="eIL-uC-Oca"/>
-                            <constraint firstItem="gOI-f0-sK0" firstAttribute="top" secondItem="cdN-ua-l5m" secondAttribute="bottom" constant="8" id="pQy-lJ-O9F"/>
+                            <constraint firstItem="gOI-f0-sK0" firstAttribute="top" secondItem="cdN-ua-l5m" secondAttribute="bottom" constant="8" symbolic="YES" id="pQy-lJ-O9F"/>
+                            <constraint firstItem="cdN-ua-l5m" firstAttribute="top" secondItem="y4k-rh-imy" secondAttribute="bottom" constant="8" symbolic="YES" id="q38-Cq-lMI"/>
                             <constraint firstItem="Cib-pi-u5J" firstAttribute="centerX" secondItem="FjY-go-2TF" secondAttribute="centerX" id="vrG-LE-g9H"/>
                             <constraint firstItem="YPR-8x-QhZ" firstAttribute="width" secondItem="Cib-pi-u5J" secondAttribute="width" id="xqA-pX-w5k"/>
                         </constraints>
